Merge branches 'cassandra-3.0.7' and 'master' of https://github.com/mesosphere/dcos-cassandra-service into cassandra-3.0.7
# Conflicts:
#	cassandra-commons/build.gradle
#	cassandra-executor/src/main/java/com/mesosphere/dcos/cassandra/executor/CassandraDaemonProcess.java